--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "build": "babel ./src --out-dir ./build",
-    "start": "node ./build/index/js",
+    "start": "node ./build/index.js",
     "dev": "nodemon --exec babel-node src/index.js",
     "lint": "eslint ."
   },
@@ -22,5 +22,8 @@
     "eslint-plugin-prettier": "^4.0.0",
     "nodemon": "^2.0.15",
     "prettier": "^2.4.1"
+  },
+  "dependencies": {
+    "express": "^4.17.1"
   }
 }
