--- a/package.json
+++ b/package.json
@@ -6,13 +6,16 @@
   "scripts": {
     "build": "babel ./src --out-dir ./build",
     "start": "node ./build/index.js",
-    "dev": "nodemon --exec babel-node src/index.js",
+    "dev": "nodemon --exec npx babel-node src/index.js",
     "lint": "eslint ."
   },
   "author": "Victoria Flores",
   "license": "ISC",
   "devDependencies": {
+    "@babel/cli": "^7.16.0",
     "@babel/core": "^7.16.0",
+    "@babel/node": "^7.16.0",
+    "@babel/plugin-transform-runtime": "^7.16.4",
     "@babel/preset-env": "^7.16.4",
     "@babel/runtime": "^7.16.3",
     "eslint": "^8.3.0",
@@ -24,7 +27,12 @@
     "prettier": "^2.4.1"
   },
   "dependencies": {
+    "consola": "^2.15.3",
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "helmet": "^4.6.0",
+    "joi": "^17.4.2",
+    "morgan": "^1.10.0"
   }
 }
