--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,11 @@
 {
-    "extends": ["airbnb-base",
-    "plugin:prettier/recommended"],
-    "plugins": ["prettier"],
+    "extends": [
+        "airbnb-base",
+        "plugin:prettier/recommended"
+    ],
+    "plugins": [
+        "prettier"
+    ],
     "rules": {
         "prettier/prettier": "error"
     }
