--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "http-status-codes": "^2.1.4",
     "joi": "^17.4.2",
     "morgan": "^1.10.0",
-    "nanoid": "^3.1.30"
+    "passport": "^0.5.0",
+    "passport-local": "^1.0.0"
   }
 }
